# bitpacking

./: Cargo.toml
src/: bitpacker4x.rs  lib.rs
