[package]
name = "bitpacking"
version = "0.8.2"
authors = ["Paul Masurel <paul.masurel@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["integer", "compression", "bitpacking"]
description = "Fast integer compression/decompression via SIMD bit-packing. Port of simdcomp to rust."
edition = "2018"

[dependencies]
crunchy = "0.2"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }

[dev-dependencies]
rand = "0.7"
criterion = "0.3"
proptest = "0.9.4"

[features]
bitpacker1x = []
bitpacker4x = []
bitpacker8x = []
default = ["bitpacker1x", "bitpacker4x", "bitpacker8x"]

[[bench]]
name = "bitpacking_bench"
path = "src/bitpacking_bench.rs"
harness = false
